Add Neo4j/Milvus environment support; align retrieval Neo4j credentials
Environment (verified on this host from elastic_slm):
- Neo4j 4.4.42 community now running on localhost:7687 (auth neo4j/avs01046,
  JDK 17 + --add-opens JVM flags in conf/neo4j.conf); py2neo and
  graph/api.py::ProtocolGraph both connect, read and write.
- Milvus: no server needed — embedded Milvus Lite (pymilvus 2.5.18 +
  milvus-lite 3.2.1) verified with the exact schema/index/insert/search
  pattern used by agent/retrieval.py and graph/vector.py.
- requirements.txt: add graph-pipeline deps (hdbscan, geopy,
  torch-geometric), pin milvus-lite, document Neo4j/Milvus services and
  the two-step langgraph install. readme.md: Local services section.

Code:
- agent/retrieval.py: align the lazy Neo4j connection password with the
  rest of the repo (12345678 -> avs01046) so graph_neighbor works against
  the local Neo4j.
- agent/agent.py: pass the query to decomposition.main() as a list.
- agent/decomposition.py: make the hardcoded 127.0.0.1:7890 outbound proxy
  opt-in via IOTPROBER_HTTP_PROXY.
- agent/drift.py: multi-GPU DataParallel + DataLoader workers; strip the
  module. prefix when checkpointing.